--- a/playground.ipynb
+++ b/playground.ipynb
@@ -27,9 +27,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "angka sekarang 0\n",
+      "angka sekarang 1\n",
+      "angka sekarang 2\n",
+      "angka sekarang 3\n",
+      "angka sekarang 4\n"
+     ]
+    }
+   ],
    "source": [
     "angka = [0,1,2,3,4]\n",
     "for i in angka :\n",
@@ -46,9 +58,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "k\n",
+      "u\n",
+      " \n",
+      "s\n",
+      "u\n",
+      "k\n",
+      "a\n",
+      " \n",
+      "p\n",
+      "r\n",
+      "o\n",
+      "g\n",
+      "r\n",
+      "a\n",
+      "m\n",
+      "a\n",
+      " \n",
+      "k\n",
+      "o\n",
+      "m\n",
+      "p\n",
+      "u\n",
+      "t\n",
+      "e\n",
+      "r\n"
+     ]
+    }
+   ],
    "source": [
     "kalimat = \"Aku suka programa komputer\"\n",
     "for huruf in kalimat:\n",
@@ -65,9 +110,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "teknik\n",
+      "kedokteran\n",
+      "fisip\n",
+      "hukum\n",
+      "fkip\n"
+     ]
+    }
+   ],
    "source": [
     "for fakultas in [\"teknik\", \"kedokteran\", \"fisip\", \"hukum\", \"fkip\"]:\n",
     "    print(fakultas)"
@@ -83,9 +140,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "industri\n",
+      "sipil\n",
+      "mesin\n",
+      "arsitektur\n",
+      "pwk\n"
+     ]
+    }
+   ],
    "source": [
     "teknik = [\"industri\", \"sipil\", \"mesin\", \"arsitektur\", \"pwk\"]\n",
     "for prodi in teknik:\n",
@@ -102,30 +171,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "for i in range(10): # akan menampilkan angka index ke-0 hingga index ke-10\n",
+    "for i in range(11): # akan menampilkan angka index ke-0 hingga index ke-10\n",
     "    print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(2,10): # membaca index ke-2 hingga ke-10\n",
-    "    i = i+ 1\n",
+    "    i = i+1\n",
     "    print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kuadrat 2 adalah 4\n",
+      "kuadrat 3 adalah 9\n",
+      "kuadrat 4 adalah 16\n",
+      "kuadrat 5 adalah 25\n",
+      "kuadrat 6 adalah 36\n",
+      "kuadrat 7 adalah 49\n",
+      "kuadrat 8 adalah 64\n",
+      "kuadrat 9 adalah 81\n",
+      "kuadrat 10 adalah 100\n",
+      "kuadrat 11 adalah 121\n",
+      "kuadrat 12 adalah 144\n",
+      "kuadrat 13 adalah 169\n",
+      "kuadrat 14 adalah 196\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(2,15):\n",
     "    print(f\"kuadrat {i} adalah {i**2}\")"
@@ -253,9 +375,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1234567891011121314151617181920\n",
+      "12345678910111213141516171819\n",
+      "123456789101112131415161718\n",
+      "1234567891011121314151617\n",
+      "12345678910111213141516\n",
+      "123456789101112131415\n",
+      "1234567891011121314\n",
+      "12345678910111213\n",
+      "123456789101112\n",
+      "1234567891011\n",
+      "12345678910\n",
+      "123456789\n",
+      "12345678\n",
+      "1234567\n",
+      "123456\n",
+      "12345\n",
+      "1234\n",
+      "123\n",
+      "12\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# Contoh ini menampilkan pengulangan bersarang menggunakan for\n",
     "data = int(input(\"Masukkan angka disini : \"))\n",
@@ -415,9 +564,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 + 2 adalah 3\n"
+     ]
+    }
+   ],
    "source": [
     "def operasi(a,b):\n",
     "    c = a+b\n",
@@ -448,11 +605,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d\n",
+      "i\n",
+      "o\n",
+      "d\n",
+      "o\n",
+      "r\n",
+      "u\n",
+      "s\n",
+      " \n",
+      "c\n",
+      "h\n",
+      "a\n",
+      "r\n",
+      "i\n",
+      "s\n",
+      " \n",
+      "a\n",
+      "l\n",
+      "f\n",
+      "i\n",
+      "a\n",
+      "n\n",
+      "o\n"
+     ]
+    }
+   ],
    "source": [
-    "# kerjakan latihan 1 di sini!"
+    "# kerjakan latihan 1 di sini!\n",
+    "\n",
+    "nama = \"diodorus charis alfiano\"\n",
+    "for huruf in nama:\n",
+    "    print(huruf)"
    ]
   },
   {
@@ -465,11 +656,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Menggambar Teknik\n",
+      "Pengantar Teknik Industri\n",
+      "Pengantar Ilmu Ekonomi\n",
+      "Sistem Lingkungan Industri\n",
+      "Fisika Dasar 1\n",
+      "Kalkulus 1\n",
+      "Kimia Dasar\n",
+      "biologi\n",
+      "Analisis dan Estimasi Biaya\n",
+      "Programa Komputer\n",
+      "Material Teknik\n",
+      "Aku sangat suka Mata Kuliah Menggambar Teknik\n"
+     ]
+    }
+   ],
    "source": [
-    "# kerjakan latihan 2 di sini!"
+    "# kerjakan latihan 2 di sini!\n",
+    "\n",
+    "list=(\"Menggambar Teknik\", \"Pengantar Teknik Industri\", \"Pengantar Ilmu Ekonomi\", \"Sistem Lingkungan Industri\", \"Fisika Dasar 1\", \"Kalkulus 1\", \"Kimia Dasar\", \"biologi\", \"Analisis dan Estimasi Biaya\", \"Programa Komputer\", \"Material Teknik\")\n",
+    "for matkul in list:\n",
+    "    print(matkul)\n",
+    "print(\"Aku sangat suka Mata Kuliah\", list[0])"
    ]
   }
  ],
@@ -489,7 +704,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
